# ITR

./: .buildinfo  .coveragerc  .devops-exclusions  .eslintrc.js  .flake8  .gitignore  .gitmodules  .markdownlint.json  .markdownlint.yaml  .pdm-python  .pre-commit-config.yaml  .prettierignore  AUTHORS.rst  Additional materials.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DataRequirements.html  DataTemplateRequirements.html  FunctionalOverview.html  LICENSE.txt  Legends.html  README.md  conf.py  contributing.html  environment.yml  examples  genindex.html  getting_started.html  index.html  index.rst  intro.html  licenses_overview.md  links.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  (+9 more)
.github/: dependabot.yml
.github/actions/pypi-publish-action/: action.yaml
.github/workflows/: actionlint.yaml  billing.yaml  bootstrap.yaml  build-documentation.yaml  build-notebooks.yaml  builds.yaml  codeql.yml  dependencies.yaml  development-release.yaml  documentation.yaml  linting.yaml  notebooks.yaml  notebooks.yml  old-release.yaml  openssf-scorecard.yaml  ossaudit.yml  pip-audit.yaml  pip-audit.yml  pip-security-audit.yaml  pre-release.yaml  prerelease.yaml  publish-to-pypi.yaml  publish-to-pypi.yml  publish-to-test-pypi.yaml  publish-to-test-pypi.yml  pythonpackage.yml  release-development.yaml  release-production.yaml  release.yaml  repository.yaml  security-audit.yaml  security.yaml  sha-pin-actions.yaml  sphinx-autobuild.yaml  sphinx-autobuild.yml  test-builds.yaml  test-release.yaml  testing.yaml  unit-tests.yaml  unittests.yml  (+2 more)
ITR/: __init__.py  __init__autouncertainties.py  configs.py  interfaces.py  logger.py  portfolio_aggregation.py  target_validation.py  temperature_score.py  utils.py  utils_autouncertainties.py
ITR/data/: __init__.py  base_providers.py  base_providers_autouncertainties.py  country_region_info.csv  country_region_info.xlsx  csv.py  data_provider.py  data_providers.py  data_warehouse.py  data_warehouse_autouncertainties.py  excel.py  json.py  osc_units.py  target_utils.py  template.py  vault_providers.py
ITR/data/input/: oecd_iso.csv
ITR/inputs/: company_data.csv
_autoapi_templates/: index.html
_sources/: DataRequirements.rst.txt  DataTemplateRequirements.rst.txt  FunctionalOverview.rst.txt  Legends.rst.txt  index.rst.txt  intro.rst.txt  rest_api.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/ITR/: index.rst.txt
autoapi/: index.html
autoapi/ITR/: index.html
autoapi/ITR/configs/: index.html
autoapi/ITR/data/: index.html
autoapi/ITR/interfaces/: index.html
autoapi/ITR/portfolio_aggregation/: index.html
autoapi/ITR/utils/: index.html
data/: data_provider_example.xlsx
dco-signoffs/: David Kroon-.txt  Heather Ackenhusen-.txt  Joris Cramwinckel-.txt  Jur de Jong-.txt  Michael Tiemann-.txt  MichaelTiemann-.txt  MichaelTiemannOSC-.txt  Oleksandr Anufriyev-.txt  nvhz5mv-.txt
dco_signoffs/: David Kroon (on behalf of Jur de Jong).txt  David Kroon.txt  add_dco_signoff.ipynb  dco.py
docs/: Calculation.md  DataProviderTemplate V2.xlsx  DataProviderTemplate.xlsx  DataRequirements.rst  DataTemplateRequirements.rst  FunctionalOverview.rst  Legends.rst  PortfolioTemplate.xlsx  conf.py  contributing.rst  getting_started.rst  index.rst  links.rst  requirements.txt  rest_api.rst  terms.rst
docs/_static/: theme_overrides.css
examples/: .gitignore  ITR_DV.py  ITR_UI.py  ITR_UI_autouncertainties.py  ITR_dash_app.py  ITR_dash_app_develop.py  ITR_dash_app_develop.py~  co2budget.ipynb  data_dump.xlsx  environment.yml  pint-pandas-problem.py  quick_temp_score_calculation.ipynb  quick_template_score_calc.ipynb  requirements.txt  s1s2_s3_calc.ipynb  template2vault.ipynb  template_update.ipynb  unittest_vs_pint.ipynb  utils.py  vault_demo_cleanup.ipynb  vault_demo_n0.ipynb  vault_demo_n1.ipynb  vault_demo_n2.ipynb  vault_ingest_company_data.ipynb  vault_v2_n0.ipynb
examples/data/: 20220215 ITR Tool Sample Data.xlsx  20220215_Template ITR Tool_v10.xlsx  20220306 ITR Tool Sample Data.xlsx  20220415 ITR Tool Sample Data.xlsx  20220720 ITR Tool Sample Data.xlsx  20220720 ITR Tool Test Data.xlsx  20220927 ITR Tool Sample Data.xlsx  20220927 ITR Tool Test Data.xlsx  20220927 ITR V2 Sample Data.xlsx  20221025 ITR V2 Sample Data.xlsx  20230106 ITR V2 Sample Data.xlsx  20230524 ITR V2 SBTi.xlsx  OECM_EI_and_production_benchmarks.xlsx  benchmark_OECM_PC.xlsx  benchmark_OECM_S3.xlsx  data_provider_example.xlsx  data_sectors.xlsx  example_budgets.csv  example_portfolio.csv  mdt-20220116-portfolio.csv  mdt-steel-demo.xlsx  rmi-20211120-output.xlsx  rmi-20211120-portfolio.csv  template_portfolio.csv  test_data_company.xlsx
scripts/: bootstrap.sh  dev-versioning.sh  dummy-versioning.sh  purge-dev-tags.sh  python-matrix-versions.sh  release-versioning.sh  rename-tests.sh  template-to-repo.sh  tomllint.sh
scripts/git-bulk/: clonefork.sh  emptyorg.sh  raisepr.sh  refresh.sh
src/: ITR
src/ITR/: __init__.py  configs.py  interfaces.py  portfolio_aggregation.py  temperature_score.py  utils.py
src/itr/: __init__.py  portfolio_aggregation.py
test/: generate_fundamental_data.py  test_autos.py  test_base_providers.py  test_different_benchmarks.py  test_e2e.py  test_excel_provider.py  test_interfaces.py  test_json_provider.py  test_nzdpu.py  test_portfolio_aggregation.py  test_projection.py  test_target_validation.py  test_targets.py  test_temperature_score.py  test_template_provider.py  test_template_v2.py  test_vault_providers.py  utils.py
test/inputs/: 1.xlsx  20220215 ITR Tool Sample Data.xlsx  20220927 ITR V2 Sample Data.xlsx  20230106 ITR V2 Sample Data.xlsx  20231031 ITR V2 SBTi Data.xlsx  20231031 ITR V2 Sample Data.xlsx  OECM_EI_and_production_benchmarks.xlsx  benchmark_OECM_PC.xlsx  benchmark_OECM_S3.xlsx  data_test_temperature_score.csv  test_data_company.xlsx  test_projection_reference.csv  ~$20220215 ITR Tool Sample Data.xlsx
tests/: test_different_benchmarks.py  test_excel_provider.py  test_interfaces.py  test_projection.py  test_temperature_score.py  utils.py
(+78 files in other folders)
