[project]
name = "ITR"
version = "v1.0.6"
description = "Assess the temperature alignment of current targets, commitments, and investment and lending portfolios."
authors = [ { name = "Michael Tiemann", email = "72577720+MichaelTiemannOSC@users.noreply.github.com" } ]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
  "Climate",
  "ITR",
  "Finance"
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = [
  "autoapi>=2.0.1",
  "dash==2.11.1",
  "dash-bootstrap-components==1.4.2",
  "diskcache==5.6.1",
  "flask==2.2.5",
  "iam-units>=2022.10.27",
  "jupyterlab==4.0.4",
  "matplotlib==3.7.2",
  "multiprocess==0.70.14",
  "numpy==1.24.3",
  "openpyxl==3.0.10",
  "openscm-units==0.5.2",
  "orca==1.8",
  "osc-ingest-tools>=0.4.3",
  "pandas>=2.1.0",
  "Pint>=0.22",
  "Pint-Pandas>=0.5",
  "psutil==5.9.5",
  "pydantic>=2.3.0",
  "pygithub==1.55",
  "pytest==7.3.2",
  "python-dotenv==1.0.0",
  "setuptools>=65.7.0",
  "sphinx<8,>=6",
  "sphinx-autoapi>=2.0.1",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme==1.3.0",
  "SQLAlchemy==1.4.48",
  "tables>=3.8.0",
  "trino==0.326.0",
  "wheel>=0.41.0",
  "xlrd==2.0.1",
]

[project.urls]
Homepage = "https://github.com/os-climate/ITR"
Repository = "https://github.com/os-climate/ITR"
Downloads = "https://github.com/os-climate/ITR/releases"
"Bug Tracker" = "https://github.com/os-climate/ITR/issues"
Documentation = "https://github.com/os-climate/ITR/tree/main/docs"
"Source Code" = "https://github.com/os-climate/ITR"

[build-system]
requires = [ "pdm-backend" ]
build-backend = "pdm.backend"

[tool.pdm.scripts]
pre_release = "scripts/dev-versioning.sh"
release = "scripts/release-versioning.sh"
test = "pytest"
tox = "tox"
doc = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }

[tool.pdm.dev-dependencies]
test = [
  "pdm[pytest]",
  "pdm[publish]",
  "pytest-cov"
]
tox = [
  "tox",
  "tox-pdm>=0.5"
]
doc = [ "sphinx" ]
dev = [
  "tox>=4.11.3",
  "tox-pdm>=0.7.0"
]

[tool.pytest.ini_options]
testpaths = [ "test/" ]

[tool.black]
line-length = 120
