[project]
name = "ITR"
version = "v1.1.3"
description = "Assess the temperature alignment of current targets, commitments, and investment and lending portfolios."
authors = [
  { name = "Michael Tiemann", email = "72577720+MichaelTiemannOSC@users.noreply.github.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["Climate", "ITR", "Finance"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]

dependencies = [
    "autoapi>=2.0.1",
    "fastparquet>=2023.10.1",
    "iam-units==2023.9.12",
    "numpy==1.26.2",
    "openpyxl==3.0.10",
    "openscm-units==0.5.2",
    "orca==1.8",
    "osc-ingest-tools>=0.5.2",
    "pandas==2.1.4",
    "pip>=23.1.2",
    "Pint>=0.23",
    "Pint-Pandas>=0.5",
    "psutil==5.9.5",
    "pydantic>=2.3.0",
    "pygithub==1.55",
    "pytest==7.3.2",
    "python-dotenv==1.0.0",
    "setuptools>=65.7.0",
    "sphinx<8,>=6",
    "sphinx-autoapi>=2.0.1",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme==1.3.0",
    "SQLAlchemy>=2.0.20",
    "tables>=3.8.0",
    "trino==0.327.0",
    "wheel>=0.41.0",
    "xlrd==2.0.1",
    "mypy-boto3-s3>=1.33.2",
    "boto3-stubs-lite>=1.33.13",
    "globalwarmingpotentials>=0.9.4",
]

[tool.setuptools.package-data]
itr = [
      "py.typed"
      ]

[project.urls]
Homepage = "https://github.com/os-climate/ITR"
Repository = "https://github.com/os-climate/ITR"
Downloads = "https://github.com/os-climate/ITR/releases"
"Bug Tracker" = "https://github.com/os-climate/ITR/issues"
Documentation = "https://github.com/os-climate/ITR/tree/main/docs"
"Source Code" = "https://github.com/os-climate/ITR"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
pre_release = "scripts/dev-versioning.sh"
release = "scripts/release-versioning.sh"
test = "pytest"
tox = "tox"
docs = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }

[tool.pdm.dev-dependencies]
test = ["pdm[pytest]", "pytest-cov"]
tox = ["tox", "tox-pdm>=0.5"]
docs = ["sphinx>=7.2.6", "sphinx-copybutton>=0.5.2"]
dev = ["tox>=4.11.3", "tox-pdm>=0.7.0"]
lint = ["pre-commit", "pyproject-flake8"]

[tool.pytest.ini_options]
testpaths = [
    "test/",
]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 70"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = "120"
extend-ignore = [
  "E501",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["test/*"]
# relative_files = true
