[project]
name = "ITR"
version = "v1.1.10"
description = "Assess the temperature alignment of current targets, commitments, and investment and lending portfolios."
authors = [
  { name = "Michael Tiemann", email = "72577720+MichaelTiemannOSC@users.noreply.github.com" },
]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["Climate", "ITR", "Finance"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]

dependencies = [
    "autoapi>=2.0.1",
    "fastparquet>=2024.2.0",
    "numpy==1.26.2",
    "openpyxl==3.1.2",
    "openscm-units==0.6.1",
    "orca==1.8",
    "osc-ingest-tools>=v0.5.5",
    "pandas>=2.2.1",
    "pip>=23.1.2",
    "Pint>=0.23",
    "Pint-Pandas<0.6.1",
    "psutil==5.9.5",
    "pydantic>=2.7.1",
    "pygithub==1.55",
    "pyproject-hooks==1.1.0",
    "pytest==8.1.1",
    "python-dotenv==1.0.0",
    "setuptools>=65.7.0",
    "sphinx<8,>=6",
    "sphinx-autoapi>=2.0.1",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "SQLAlchemy>=2.0.29",
    "tables>=3.8.0",
    "trino==0.328.0",
    "wheel>=0.41.0",
    "xlrd==2.0.1",
    "mypy-boto3-s3>=1.33.2",
    "boto3-stubs-lite>=1.33.13",
    "globalwarmingpotentials>=0.9.4",
]

[tool.setuptools.package-data]
itr = [
      "py.typed"
      ]

[project.urls]
Homepage = "https://github.com/os-climate/ITR"
Repository = "https://github.com/os-climate/ITR"
Downloads = "https://github.com/os-climate/ITR/releases"
"Bug Tracker" = "https://github.com/os-climate/ITR/issues"
Documentation = "https://github.com/os-climate/ITR/tree/main/docs"
"Source Code" = "https://github.com/os-climate/ITR"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
pre_release = "scripts/dev-versioning.sh"
release = "scripts/release-versioning.sh"
test = "pytest"
tox = "tox"
docs = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }

[tool.pdm.dev-dependencies]
test = ["pdm[pytest]", "pytest-cov"]
tox = ["tox", "tox-pdm>=0.5"]
docs = ["sphinx>=7.2.6", "sphinx-copybutton>=0.5.2"]
dev = ["tox>=4.11.3", "tox-pdm>=0.7.0"]
lint = ["pre-commit"]

[tool.pytest.ini_options]
testpaths = [
    "test/",
]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 70"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = "120"
extend-ignore = [
  "E501",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["test/*"]
# relative_files = true

[tool.ruff.lint]
extend-fixable = [
    # Instead of trailing-whitespace
    "W291", "W293"
    ]

extend-select = [
    # Instead of pydocstyle
    "D",
    #Instead of flake8
    "E", "F","B",
    # Instead of pep8-naming
    "N",
    # Instead of flake8-debugger or debug-statements
    "T10",
]

ignore = [
    "B006",
    "B007",
    "B008",
    "B011",
    "B023",
    "B024",
    "B026",
    "B027",
    "B028",
    "B904",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D205",
    "D400",
    "D401",
    "D404",
    "D415",
    "D419",
    "E501",
    "E721",
    "F841",
    "N801",
    "N802",
    "N803",
    "N804",
    "N805",
    "N806",
    "N807",
    "N814",
    "N815",
    "N816",
    "N999",
]
